# github-downloader

./: Cargo.toml  Readme.md
projects/download-release/: Cargo.toml  Readme.md
projects/download-release/src/: lib.rs
projects/download-release/src/github/: mod.rs
projects/download-release/tests/: main.rs
projects/github-downloader/: Cargo.toml
projects/github-downloader/src/: lib.rs
projects/github-downloader/src/release/: list-releases.json  mod.rs
