[package]
name = "download-release"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Download files, folders, releases from github"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
octocrab = "0.17.0"
tokio = { version = "1.23.0", features = ["full"] }

[dependencies.diagnostic-quick]
version = "0.3.5"
features = []

[dev-dependencies]

[features]
default = []
