[package]
name = "github-downloader"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Download files, folders, releases from github"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
reqwest = "0.11.4"
typify = "0.0.10"

[dependencies.diagnostic-quick]
version = "0.3.4"
featires = ["semver", "url"]

[dev-dependencies]

[features]
default = []
